<resources>
    <string name="app_name">F1History</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ajustes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_resultados">Resultados</string>
    <string name="title_activity_anyo_campeonato">Anyo Campeonato</string>
    <string name="title_activity_ajustes">Ajustes</string>
    <string name="title_activity_contact">Contacto</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo Electronico</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">El Email introducido es invalido</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">La Contraseña es incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_clasificacion">Clasificacion</string>
    <string name="title_activity_circuitos">Circuitos</string>
    <string name="title_activity_calendario">Calendario</string>
    <string name="title_activity_pilotos">Pilotos</string>
    <string name="title_activity_equipos">Equipos</string>


    <string name="titulo_actividad_detalle">Actividad De Detalle</string>
    <string name="nombre_transicion_imagen">imagen_compartida</string>
    <string name="title_activity_grid_item">Grid_item</string>
    <string name="title_activity_detalles__pilotos">Detalles_Pilotos</string>
    <string name="title_activity_detalles__equipos">Detalles_Equipos</string>
    <string name="title_activity_detalles__circuitos">Detalles_Circuitos</string>
    <string name="title_activity_grid__list">Grid_List</string>
    <string name="title_activity_detalles__resultados">Detalles_Resultados</string>
    <string name="title_activity_maps_circuitos">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_favoritos">Favoritos</string>

    <string name="guardado_circuitos">Circuito guardado</string>
    <string name="guardado_pilotos">Piloto guardado</string>
    <string name="guardado_equipos">Equipo guardado</string>
    <string name="error_guardado_circuitos">Este circuito ya esta en favoritos</string>
    <string name="error_guardado_equipos">Este equipo ya esta en favoritos</string>
    <string name="error_guardado_pilotos">Este piloto ya esta en favoritos</string>


    <string name="ganadas">Ganadas</string>
    <string name="Resultados">Resultados</string>
    <string name="Clasificacion">Clasificacion</string>
    <string name="Equipos">Equipos</string>
    <string name="Pilotos">Pilotos</string>
    <string name="Calendario">Calendario</string>
    <string name="Circuitos">Circuitos</string>
    <string name="Proximo_exento">Proximo evento</string>
    <string name="Dias">Dias</string>
    <string name="Horas">Horas</string>
    <string name="Minutos">Minutos</string>
    <string name="Segundos">Segundos</string>
    <string name="Posicion">Posicion</string>
    <string name="Pos">Pos</string>



    <string name="Puntos">Puntos</string>
    <string name="Corredor">Corredor</string>
    <string name="Nombre_de_equipo">Nombre de Equipo</string>
    <string name="Nombre">Nombre</string>
    <string name="Fecha_de_Nacimiento">Fecha de Nacimiento</string>
    <string name="Nacionalidad">Nacionalidad</string>
    <string name="Numero_de_Carrera">Numero de Carrera</string>
    <string name="Carrera">Carrera</string>
    <string name="Fecha">Fecha</string>
    <string name="Hora">Hora</string>
    <string name="Localidad">Localidad</string>
    <string name="Pais">Pais</string>
    <string name="Historia_del_Circuito">Historia del Circuito</string>
    <string name="Ajustes">Ajustes</string>
    <string name="Contact">Contacto</string>
    <string name="About">Acerca de</string>
    <string name="Año_Campeonato">Año Campeonato</string>
    <string name="Favoritos">Favoritos</string>
    <string name="Preferencias">Preferencias</string>
    <string name="Pais_de_Origen">Pais de Origen</string>
    <string name="Descripción_de">Descripción de</string>
    <string name="Biografia_de">Biografia de</string>
    <string name="Satelite">Satelite</string>
    <string name="Relieve">Relieve</string>


    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="Año_Competición">Año Competicion</string>
    <string name="Contacto">Contacto</string>
    <string name="El_año_ha_cambiado_a">El año ha cambiado a</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="borrado">¿Desea borrar este elemento?</string>
    <string name="no">No</string>
    <string name="si">Si</string>




    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user..</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_twitter">Twitter Authentication</string>
    <string name="desc_twitter">Use a twitter account to authenticate with Firebase.</string>



    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="about">Esta aplicacion ha sido realizada como proyecto de Android de 1DAW de IES Estacio, realizada
    por Alejandro Garcia Sanz y Jorge Sempere Perez</string>
</resources>
